--- a/README
+++ b/README
@@ -8,3 +8,4 @@
 
  For details on the included linguistic data, installation, requirements, 
  licenses, etc. please visit http://www.lsi.upc.edu/~freeling
+ or see the manual in doc/userman
