git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@309 9b274142-39a2-40f6-a478-1b104364ee40

--- a/doc/userman/biblio.bib
+++ b/doc/userman/biblio.bib
@@ -1,5 +1,4 @@
 
-
 @inproceedings{brants00,
 author = "Thorsten Brants",
 title = "TnT: A Statistical Part-of-Speech Tagger",
@@ -65,3 +64,10 @@ year = "2005",
 number = "35",
 pages = "455--456",
 month = "September"}
+
+@inproceedings{agirre09,
+author = "Eneko Agirre and Aitor Soroa",
+title = "Personalizing PageRank for Word Sense Disambiguation",
+booktitle = "Proceedings of the 12th conference of the European chapter of the Association for Computational Linguistics (EACL-2009)",
+address = "Athens, Greece",
+year = "2009"}
