git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@313 9b274142-39a2-40f6-a478-1b104364ee40

--- a/doc/userman/biblio.bib
+++ b/doc/userman/biblio.bib
@@ -1,4 +1,13 @@
 
+@article{soon01,
+title = "A machine learning approach to coreference resolution of noun phrases",
+author = "W. M. Soon and H. T. Ng and D. C. Y. Lim",
+journal = "Computational Linguistics",
+volume= "27", 
+number= "4",
+year= "2001",
+pages= "521--544"}
+
 @inproceedings{brants00,
 author = "Thorsten Brants",
 title = "TnT: A Statistical Part-of-Speech Tagger",
