--- a/doc/userman/biblio.bib
+++ b/doc/userman/biblio.bib
@@ -53,16 +53,13 @@ publisher = "The MIT Press",
 year = "1998",
 series = "Language, Speech, and Communication"}
 
-
-@article{vossen98a,
-author = "Piek Vossen and L. Bloksma and A. Alonge and E. Marinai and C. Peters and Irene Castell\'on and M. Ant\`onia Mart\'{\i} and German Rigau",
-title = "Compatibility in Interpretation of Relation in EuroWordNet",
-journal = "Computers and the Humanities, Double Special Issue on EuroWordNet",
-year = "1998",
-volume = "32",
-number = "2,3",
-pages = "153--184",
-note = "Also in 'EUROWORDNET A Multilingual Database with Lexical Semantic Networks' ed. Piek Vossen. Kluwer Academic Publishers. Dordrecht, The Netherlands"}
+@book{vossen98a,
+editor = "Piek Vossen",
+title = "EuroWordNet: A Multilingual Database with Lexical Semantic Networks",
+publisher = "Kluwer Academic Publishers",
+address="Dordrecht",
+year = "1998"
+}
 
 
 @article{atserias05,
